--- a/RestaurantSigloXXI/Vista/WPFCalcularPedido.xaml
+++ b/RestaurantSigloXXI/Vista/WPFCalcularPedido.xaml
@@ -10,10 +10,10 @@
         xmlns:local="clr-namespace:Vista"
         mc:Ignorable="d"
         BorderThickness="2" BorderBrush="Black"
-        Title="Calcular Pedido a Proveedor" Height="626.645" Width="1109.508" WindowStartupLocation="CenterScreen" Cursor="Arrow" FontWeight="Bold" WindowTitleBrush="Black" Icon="Imagenes/logoFinal2 .png" ResizeMode="NoResize" TitleCharacterCasing="Normal" Background="#FFDBDFE3" Closing="MetroWindow_Closing" >
-    <Grid HorizontalAlignment="Left" Height="596" VerticalAlignment="Top" Width="1100" Margin="0,0,0,-1.333">
-        <Image x:Name="image" HorizontalAlignment="Left" Height="610" VerticalAlignment="Top" Width="1124" Source="Imagenes/about-img.jpg" Stretch="Fill" Opacity="0.3" Margin="0,0,-24,-14"/>
-        <GroupBox x:Name="groupBox1" Header="Detalle Pedido" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="23,10,0,0" Width="606" Background="#FFCB5F21" mah:ControlsHelper.ContentCharacterCasing="Upper" FontSize="13.333" BorderBrush="#FFCB5F21" Height="534" >
+        Title="Calcular Pedido a Proveedor" Height="626.645" Width="1199.508" WindowStartupLocation="CenterScreen" Cursor="Arrow" FontWeight="Bold" WindowTitleBrush="Black" Icon="Imagenes/logoFinal2 .png" ResizeMode="NoResize" TitleCharacterCasing="Normal" Background="#FFDBDFE3" Closing="MetroWindow_Closing" >
+    <Grid HorizontalAlignment="Left" Height="596" VerticalAlignment="Top" Width="1190" Margin="0,0,0,-1.333">
+        <Image x:Name="image" HorizontalAlignment="Left" Height="610" VerticalAlignment="Top" Width="1202" Source="Imagenes/about-img.jpg" Stretch="Fill" Opacity="0.3" Margin="0,0,-39,-14"/>
+        <GroupBox x:Name="groupBox1" Header="Detalle Pedido" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="23,10,0,0" Width="706" Background="#FFCB5F21" mah:ControlsHelper.ContentCharacterCasing="Upper" FontSize="13.333" BorderBrush="#FFCB5F21" Height="534" >
             <Grid>
                 <GroupBox x:Name="groupBox" Header="Información de Producto" Margin="8,314,9.667,0" VerticalAlignment="Top" Height="166" Background="#FFCB5F21" mah:ControlsHelper.ContentCharacterCasing="Upper" FontSize="13.333" BorderBrush="#FFCB5F21">
                     <Grid HorizontalAlignment="Left" Height="137" VerticalAlignment="Top" Width="561" Margin="0,-2,-0.333,-4.333" Background="{x:Null}">
@@ -33,10 +33,10 @@
 
                     </Grid>
                 </GroupBox>
-                <GroupBox x:Name="groupBox_Copy" Header="Productos con Bajo Stock " Margin="8,54,305.667,0" VerticalAlignment="Top" Height="255" Background="#FFCB5F21" mah:ControlsHelper.ContentCharacterCasing="Upper" FontSize="13.333" BorderBrush="#FFCB5F21">
-                    <Grid HorizontalAlignment="Left" Height="222" VerticalAlignment="Top" Width="273" Margin="0,-2,-0.333,0" Background="{x:Null}">
+                <GroupBox x:Name="groupBox_Copy" Header="Productos con Bajo Stock " Margin="8,54,333,0" VerticalAlignment="Top" Height="255" Background="#FFCB5F21" mah:ControlsHelper.ContentCharacterCasing="Upper" FontSize="13.333" BorderBrush="#FFCB5F21">
+                    <Grid HorizontalAlignment="Left" Height="222" VerticalAlignment="Top" Width="346" Margin="0,-2,0,0" Background="{x:Null}">
 
-                        <DataGrid x:Name="dgListaProducto" IsReadOnly="True" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Height="170" Width="253" FontWeight="Normal" BorderBrush="#FFCB5F21" Foreground="Black" >
+                        <DataGrid x:Name="dgListaProducto" IsReadOnly="True" ColumnWidth="*" HorizontalAlignment="Left" Margin="0,10,0,0" VerticalAlignment="Top" Height="170" Width="346" FontWeight="Normal" BorderBrush="#FFCB5F21" Foreground="Black" >
 
                             <DataGrid.Resources>
                                 <Style TargetType="{x:Type DataGridCell}">
@@ -49,7 +49,7 @@
                                 </Style>
                             </DataGrid.Resources>
                         </DataGrid>
-                        <Button x:Name="btnRefrescar" ToolTip="Refrescar" HorizontalAlignment="Left" Width="34"  Style="{DynamicResource MahApps.Metro.Styles.MetroCircleButtonStyle}" BorderBrush="Black" Click="btnRefrescar_Click" Margin="229,180,0,0" Height="34" VerticalAlignment="Top"  >
+                        <Button x:Name="btnRefrescar" ToolTip="Refrescar" HorizontalAlignment="Left" Width="34"  Style="{DynamicResource MahApps.Metro.Styles.MetroCircleButtonStyle}" BorderBrush="Black" Click="btnRefrescar_Click" Margin="302,185,0,0" Height="34" VerticalAlignment="Top"  >
                             <Button.Background>
                                 <ImageBrush ImageSource="Imagenes/Command-Refresh-blue.png"/>
                             </Button.Background>
@@ -58,10 +58,10 @@
 
                     </Grid>
                 </GroupBox>
-                <GroupBox x:Name="groupBox_Copy1" Header="Bebidas con Bajo Stock " Margin="296,58,9.667,0" VerticalAlignment="Top" Height="251" Background="#FFCB5F21" mah:ControlsHelper.ContentCharacterCasing="Upper" FontSize="13.333" BorderBrush="#FFCB5F21">
-                    <Grid HorizontalAlignment="Left" Height="221" VerticalAlignment="Top" Width="273" Margin="0,-2,-0.333,-3" Background="{x:Null}">
+                <GroupBox x:Name="groupBox_Copy1" Header="Bebidas con Bajo Stock " Margin="369,54,9.667,0" VerticalAlignment="Top" Height="255" Background="#FFCB5F21" mah:ControlsHelper.ContentCharacterCasing="Upper" FontSize="13.333" BorderBrush="#FFCB5F21">
+                    <Grid HorizontalAlignment="Left" Height="221" VerticalAlignment="Top" Width="308" Margin="0,-2,0,0" Background="{x:Null}">
 
-                        <DataGrid x:Name="dgListaBebida" IsReadOnly="True" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Height="170" Width="253" FontWeight="Normal" BorderBrush="#FFCB5F21" Foreground="Black" >
+                        <DataGrid x:Name="dgListaBebida" ColumnWidth="*" IsReadOnly="True" HorizontalAlignment="Left" Margin="0,10,0,0" VerticalAlignment="Top" Height="170" Width="308" FontWeight="Normal" BorderBrush="#FFCB5F21" Foreground="Black" >
 
                             <DataGrid.Resources>
                                 <Style TargetType="{x:Type DataGridCell}">
@@ -74,7 +74,7 @@
                                 </Style>
                             </DataGrid.Resources>
                         </DataGrid>
-                        <Button x:Name="btnRefrescar1" ToolTip="Refrescar" HorizontalAlignment="Left" Width="34"  Style="{DynamicResource MahApps.Metro.Styles.MetroCircleButtonStyle}" BorderBrush="Black" Click="btnRefrescar1_Click" Margin="229,180,0,0" Height="34" VerticalAlignment="Top"  >
+                        <Button x:Name="btnRefrescar1" ToolTip="Refrescar" HorizontalAlignment="Left" Width="34"  Style="{DynamicResource MahApps.Metro.Styles.MetroCircleButtonStyle}" BorderBrush="Black" Click="btnRefrescar1_Click" Margin="264,185,0,0" Height="34" VerticalAlignment="Top"  >
                             <Button.Background>
                                 <ImageBrush ImageSource="Imagenes/Command-Refresh-blue.png"/>
                             </Button.Background>
@@ -89,7 +89,7 @@
             </Grid>
         </GroupBox>
 
-        <GroupBox x:Name="groupBox_Copy2" Header="Verificar Pedido" Margin="634,10,29,0" VerticalAlignment="Top" Height="534" Background="#FFCB5F21" mah:ControlsHelper.ContentCharacterCasing="Upper" FontSize="13.333" BorderBrush="#FFCB5F21">
+        <GroupBox x:Name="groupBox_Copy2" Header="Verificar Pedido" Margin="734,10,25,0" VerticalAlignment="Top" Height="534" Background="#FFCB5F21" mah:ControlsHelper.ContentCharacterCasing="Upper" FontSize="13.333" BorderBrush="#FFCB5F21">
             <Grid HorizontalAlignment="Left" Height="503" VerticalAlignment="Top" Width="424" Margin="0,-2,0,-2.333" Background="{x:Null}">
 
                 <DataGrid x:Name="dgListaPedido" IsReadOnly="True" ColumnWidth="*" HorizontalAlignment="Left" Margin="10,45,0,0" VerticalAlignment="Top" Height="353" Width="404" FontWeight="Normal" BorderBrush="#FFCB5F21" Foreground="Black" LoadingRow="dgListaPedido_LoadingRow" >
@@ -108,11 +108,12 @@
                 <Button x:Name="btnGuardar" ToolTip="Guardar Pedido" Content="Guardar" HorizontalAlignment="Left"  VerticalAlignment="Top" Width="78"  FontWeight="Normal" Click="btnGuardar_Click" mah:ButtonHelper.PreserveTextCase="True" RenderTransformOrigin="1.662,0.727" Style="{StaticResource AccentedSquareButtonStyle}" Background="#FFCB5F21" FontSize="12" Margin="239,446,0,0" Height="29"/>
                 <Label x:Name="label_Copy2" Content="Total del Pedido:" HorizontalAlignment="Left" Margin="19,403,0,0" VerticalAlignment="Top" FontSize="12"/>
                 <Label x:Name="lblTotal" Content="-" HorizontalAlignment="Left" Margin="128,403,0,0" VerticalAlignment="Top" FontSize="12"/>
-                <Button x:Name="btnEliminar" ToolTip="Quitar registro de la lista de Pedido" Content="Quitar" HorizontalAlignment="Left"  VerticalAlignment="Top" Width="78"  FontWeight="Normal" Click="btnQuitar_Click" mah:ButtonHelper.PreserveTextCase="True" RenderTransformOrigin="1.662,0.727" Style="{StaticResource AccentedSquareButtonStyle}" Background="#FFCB5F21" FontSize="12" Margin="19,445,0,0" Height="29"/>
+                <Button x:Name="btnEliminar" ToolTip="Quitar registro de la lista de Pedido" Content="Quitar" HorizontalAlignment="Left"  VerticalAlignment="Top" Width="78"  FontWeight="Normal" Click="btnQuitar_Click" mah:ButtonHelper.PreserveTextCase="True" RenderTransformOrigin="1.662,0.727" Style="{StaticResource AccentedSquareButtonStyle}" Background="#FFCB5F21" FontSize="12" Margin="19,446,0,0" Height="29"/>
                 <Label x:Name="label_Copy4" Content="Número de Pedido:" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" FontSize="12"/>
                 <Label x:Name="lblNumero" Content="-" HorizontalAlignment="Left" Margin="134,10,0,0" VerticalAlignment="Top" FontSize="12"/>
                 <Button x:Name="btnCancelar" ToolTip="Cancelar Operación" Content="Cancelar" HorizontalAlignment="Left" Margin="339,446,0,0" VerticalAlignment="Top" Width="75" FontWeight="Normal" Cursor="Arrow"  mah:ButtonHelper.PreserveTextCase="True" RenderTransformOrigin="1.662,0.727" Style="{StaticResource AccentedSquareButtonStyle}" Background="#FFA11400" FontSize="12" Click="btnCancelar_Click"/>
-
+              <!--  <Button x:Name="btnPDF" ToolTip="Generar PDF" Content="PFD" HorizontalAlignment="Left"  VerticalAlignment="Top" Width="78"  FontWeight="Normal" Click="btnPDF_Click" mah:ButtonHelper.PreserveTextCase="True" RenderTransformOrigin="1.662,0.727" Style="{StaticResource AccentedSquareButtonStyle}" Background="#FFCB5F21" FontSize="12" Margin="128,445,0,0" Height="29"/>
+-->
             </Grid>
         </GroupBox>
 
