--- a/RestaurantSigloXXI/Vista/WindowFinanza.xaml
+++ b/RestaurantSigloXXI/Vista/WindowFinanza.xaml
@@ -125,7 +125,7 @@
             </Grid>
         </Controls:Tile>
         <Image x:Name="image2" Height="118" Margin="844,82,75,0" VerticalAlignment="Top" Source="Imagenes/logoFinal3.png"/>
-        <Controls:Tile ToolTip="Emitir Boleta" Margin="748,266,226,241" Click="Boleta_Click" Height="Auto" Controls:ControlsHelper.MouseOverBorderBrush="#FFCB5F21" Width="Auto" Foreground="#FFCB5F21"  BorderBrush="#FFCB5F21" Background="#FF040100" Opacity="0.85" >
+        <Controls:Tile ToolTip="Ver Utilidades" Margin="748,266,226,241" Click="Boleta_Click" Height="Auto" Controls:ControlsHelper.MouseOverBorderBrush="#FFCB5F21" Width="Auto" Foreground="#FFCB5F21"  BorderBrush="#FFCB5F21" Background="#FF040100" Opacity="0.85" >
 
             <Controls:Tile.Effect>
                 <DropShadowEffect Color="#FFCB5F21" BlurRadius="10" ShadowDepth="8"/>
@@ -137,7 +137,7 @@
                         <DropShadowEffect Opacity="0.795" Color="#FF838383"/>
                     </Image.Effect>
                 </Image>
-                <Label x:Name="label2" Content="Boleta" Foreground="White" FontWeight="Bold" FontSize="14" BorderThickness="1" RenderTransformOrigin="0.5,0.5" Margin="51,77,47,0">
+                <Label x:Name="label2" Content="Utilidades" Foreground="White" FontWeight="Bold" FontSize="14" BorderThickness="1" RenderTransformOrigin="0.5,0.5" Margin="40,77,32,0">
                     <Label.Effect>
                         <DropShadowEffect BlurRadius="6" Opacity="0.8" ShadowDepth="2" Color="#FF838383"/>
                     </Label.Effect>
